fix footer on small screens

--- a/styles/index.css
+++ b/styles/index.css
@@ -5,6 +5,12 @@
   padding: 0;
 }
 
+html ,body{
+  height: 100%;
+  margin: 0;
+  padding: 0;
+}
+
 html {
   scroll-behavior: smooth;
 }
@@ -17,8 +23,9 @@ body {
 }
 
 .header {
+  height: 100px;
   position: fixed;
-  top: 15px;
+  top: 0;
   left: 0;
   right: 0;
   display: flex;
@@ -64,13 +71,21 @@ body {
   font-weight: 600;
   border-bottom: 2px solid white;
 }
+
+.hero{
+  margin-top: 100px;
+  background-color: red;
+  height:100vh;
+}
+
+
   
 #main-footer {
+  height: 60px;
   position: fixed;
   bottom: 0;
   left: 0;
   right: 0;
-  height: 80px;
   background-color: #3f1c1c;
   color: white;
   display: flex;
@@ -79,14 +94,6 @@ body {
   padding: 0 40px;
   z-index: 999;
 }
-
-
-body::after {
-  content: "";
-  display: block;
-  height: 80px; 
-}
-
 
 .footer-links {
   display: flex;
@@ -109,10 +116,10 @@ body::after {
 
 @media (max-width : 600px){
   .brand-name{
-    font-size: 1.2rem;
+    font-size: 1rem;
   }
   .info-links .nav-link{
-    font-size: 0.8rem;
+    font-size: 0.6rem;
     gap: 0.5rem;
   }
 
@@ -123,5 +130,29 @@ body::after {
   .header{
     height: 50px;
   }
+  .hero{
+    margin-top: 50px;
+  }
+
+  #main-footer{
+    height: 30px;
+  }
+  .footer-content{
+    font-size: 0.55rem;
+  }
+  .footer-links .nav-link{
+    font-size: 0.6rem;
+    gap: 0.5rem;
+  }
+
+  .footer-links{
+    gap: 0.5rem;
+    margin-left: 8px;
+  }
+
+  
+  
+ 
+  
 }
 
